--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Odin Project: Library</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+
 </head>
 <body>
-    <div id="container">
-
-    </div>
+    <div id="container">The Odin Project: Library</div>
+    <script src="script.js"></script>
 </body>
 </html>
