--- a/index.html
+++ b/index.html
@@ -8,7 +8,35 @@
 
 </head>
 <body>
-    <div id="container">The Odin Project: Library</div>
+    <div id="container">
+        <h1>
+            The Odin Project: Library
+        </h1>
+        <table>
+            <tr>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Pages</th>
+                <th>Already Read?</th>
+            </tr>
+        </table>
+        <dialog>
+            <form action="example.com/path" method="post">
+                <label for="title">Title</label>
+                <input type="text" id="title">
+
+                <label for="author">Author</label>
+                <input type="text" id="author">
+
+                <label for="pages">Pages</label>
+                <input type="text" id="pages">
+
+                <label for="already_read">Read?</label>
+                <input type="text" id="already_read">
+            </form>
+        </dialog>
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
