refresh table when new book is added to the library

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 </div>
                 <div>
                     <label for="pages">Pages</label>
-                    <input type="text" id="pages">
+                    <input type="text" id="pages" >
                 </div>
                 <div>
                     <label for="already_read">Read?</label>
                     <input type="checkbox" id="already_read">
                 </div>
-                <button autofocus id="addNewBook">Finish</button>
+                <button autofocus id="finish-book">Finish</button>
             </form>
         </dialog>
         <button id="Add-Book"> ADD BOOK</button>
